Finish first production stage
